k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-v1
  template:
    metadata:
      labels:
        app: api-v1
    spec:
      containers:
        - name: api
          image: registry.gitlab.com/nestz671/kiss-container-registries/api:0.1.3
          imagePullPolicy: Always
          ports:
            - name: main-port
              containerPort: 3000
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
            requests:
              cpu: 25m
              memory: 100Mi
      imagePullSecrets:
        - name: gitlab-docker-registry
---
apiVersion: v1
kind: Service
metadata:
  name: api-v1
  annotations:
    dev.okteto.com/auto-ingress: "true"
spec:
  type: LoadBalancer 
  selector:
    app: api-v1
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    dev.okteto.com/generate-host: "true"
  name: kiss-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: api-v1
          servicePort: 80
        path: /
